fix(Objectives->Visibility form): fixed text overlap
(cherry picked from commit b0bff52)

--- a/src/public/css/main_en.css
+++ b/src/public/css/main_en.css
@@ -7002,6 +7002,7 @@ ul.newSelectList .miniStylePagination {
 }
 .objectivesDescValue {
   /*height: 105px;*/
+  padding-right: 10px;
   overflow: hidden;
 }
 .afterTextBlock {
